# backend/controllers/clientControllers.js
@@ -2,6 +2,18 @@ import prisma from "../config/prismaClient.js";
 
 export const getAllClients = async (req, res) => {
   try {
+    const clients = await prisma.client.findMany({
+        include:{
+            user:{
+                select:{
+                    firstName:true,
+                    lastName:true,
+                    email:true
+                }
+            }
+        }
+    })
+    res.status(200).json(clients)
   } catch (error) {
     console.log(error);
     res.status(500).json({ message: "Internal server error" });
